# webshark

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  paper.md
src/: capture.rs  handlers.rs  main.rs  tests.rs  types.rs  utils.rs  websocket.rs
static/: index.html
static/css/: styles.css
static/js/: app.js  ws.js
